# vector-eigenvalues

./: Example.hs  LICENSE  README.md  eigenvalues.cabal
cbits/: eigen.c  eigen.h
src/Data/Vector/: Eigenvalues.hs
