name:                vector-eigenvalues
version:             0.1.0.1
synopsis:            Just eigenvalues.
homepage:            https://github.com/sdiehl/vector-eigenvalues
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
Category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1
extra-source-files:  
  cbits/eigen.h
Bug-Reports:         https://github.com/sdiehl/vector-eigenvalues/issues

Description:
  Standalone foreign interface for LAPACK eigenvalues.
Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/haskell-picosat.git

library
  exposed-modules:     
    Data.Vector.Eigenvalues

  other-extensions:
    ForeignFunctionInterface

  ghc-options:        -Wall -fwarn-tabs -O2 -llapack
  cc-options:         -O3 -llapack
  default-language:   Haskell2010
  Hs-source-dirs:     src
  Include-dirs:       cbits

  build-depends:
    base    >=4.6 && <4.7,
    vector  -any

  C-sources:
    cbits/eigen.c
